<resources>
    <string name="app_name">Shopping App</string>


    <string name="login_welcome">Welcome Back</string>
    <string name="login_welcome_text">Log In!</string>
    <string name="login_mobile_hint">MOBILE NUMBER</string>
    <string name="login_mobile_ph">Enter mobile number</string>
    <string name="login_password_hint">PASSWORD</string>
    <string name="login_password_ph">Enter Password</string>
    <string name="login_switch_remember_text">Remember Me</string>
    <string name="login_btn_text">Log In</string>
    <string name="login_forgot_text">Forgot Password?</string>


    <string name="signup_switch_tnc_label">I accept the policy and terms</string>
    <string name="signup_seller_text">Do you wish to sell any products?</string>
    <string name="signup_error_message">Some error occurred</string>


    <string name="login_signup_message">New User? Sign Up</string>
    <string name="login_error_message">Some error occurred</string>
    <string name="image_remove_button">Image Remove Button</string>
    <string name="image_item">Image Item</string>
    <string name="add_images_to_product_des">Add Images (Max 3)</string>
    <string name="description">Description</string>
    <string name="colors_available">Colors Available</string>
    <string name="sizes_available">Sizes Available</string>
    <string name="error_occurred">Error Occurred</string>
    <string name="no_product_added_yet">No Product Added Yet!</string>
    <string name="decrease_button">Decrease Button</string>
    <string name="increase_button">Increase Button</string>
    <string name="like_button">Like Button</string>
    <string name="remove_product_button">Remove Product Button</string>
    <string name="check_out">Check Out</string>
    <string name="no_product_liked_yet">No product liked yet!</string>

    <string name="product_actual_price_text"><strike>$3000.00</strike></string>
    <string name="edit_product_button">Edit Product Button</string>
    <string name="product_add_to_cart_button">Product add to cart button</string>
    <string name="add_product">Add Product</string>
    <string name="search_product">Search Product</string>
    <string name="search_user">Search User</string>
    <string name="search_order">Search Order By Id</string>
    <string name="products">Products</string>
    <string name="shipping_details">Shipping Details</string>
    <string name="change_order_status_button">Change Order Status Button</string>
    <string name="shipping_date">Shipping Date</string>
    <string name="address">Address</string>
    <string name="current_status">Current Status</string>
    <string name="payment_details">Payment Details</string>
    <string name="shipping_price">Shipping Price</string>
    <string name="import_charges">Import Charges</string>
    <string name="total_price">Total Price</string>
    <string name="order_status">Order Status</string>
    <string name="items">Items</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="success_image">Success Image</string>
    <string name="success">Success</string>
    <string name="thank_you_for_shopping">thank you for shopping</string>
    <string name="back_to_home">Back To Home</string>
    <string name="select_sizes">Select Sizes</string>
    <string name="select_color">Select Color</string>
    <string name="specification">Specification</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="public_user">Public</string>
    <string name="active_user">Active</string>
    <string name="payment_error">Payment Error</string>
    <string name="next">Next</string>
    <string name="accept_order">Accept Order</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_exist">Account already used</string>
    <string name="user_is_not_exist">Account is not found</string>
    <string name="you_have_account_text">Already have an account? Log In</string>
    <string name="no_connection">No Connection</string>
    <string name="favorites">Favorites</string>
    <string name="filter">Filter</string>
    <string name="delete_dialog_title_text">Are you sure?</string>
    <string name="delete_dialog_message_text">On proceeding, Product : %s will be deleted.</string>
    <string name="pro_cat_dialog_title">Select Product Category</string>
    <string name="select_order_status">Select Order Status</string>
    <string name="pro_cat_dialog_cancel_btn">Cancel</string>
    <string name="pro_cat_dialog_ok_btn">OK</string>
    <string name="delete_dialog_delete_btn_text">Delete</string>
    <string name="pro_details_price_value">$%s</string>
    <string name="pro_details_actual_strike_value">$%s</string>
    <string name="add_product_error_img_upload">Error uploading Images, Try Again!</string>
    <string name="add_product_insert_error">Error Saving Product!</string>
    <string name="edit_product_btn_text">Save Changes</string>
    <string name="add_product_error_string">Fill all the details!</string>
    <string name="add_pro_error_price_string">Price can not be 0.</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="account">Account</string>
    <string name="delete_cart_item_message_text">On Proceeding, selected Item will be deleted from your Cart.</string>
    <string name="sign_out_dialog_title_text">Sign Out?</string>
    <string name="sign_out_dialog_message_text">On proceeding, you will be signed out of the app.</string>
    <string name="dialog_sign_out_btn_text">Sign Out</string>
    <string name="price_text">$%s</string>
    <string name="no_orders_placed_text">Nothing To Show</string>
    <string name="orders_fragment_title">Orders</string>
    <string name="order_date_text">Ordered On : %s %s, %s</string>
    <string name="order_items_count_text">%s items purchased</string>
    <string name="pro_offer_precent_text">%s%% Off</string>
    <string name="cart_fragment_label">Your Cart</string>
    <string name="price_card_items_string">Items(%s)</string>
    <string name="refresh">Refresh</string>
    <string name="profile">Profile</string>
    <string name="pro_details_go_to_cart_btn_text">Go To Cart</string>
    <string name="pro_details_add_to_cart_btn_text">Add To Cart</string>
    <string name="update_cart">Update Cart</string>
    <string name="location">Location</string>
    <string name="street">Street</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="city">City</string>
    <string name="pay_now">Pay Now</string>
    <string name="price">Price</string>
    <string name="my_balance">My Balance</string>
    <string name="add_balance">Add Balance</string>
    <string name="signout">SignOut</string>
    <string name="my_wallet">My Wallet</string>
    <string name="statistics">Statistics</string>
    <string name="users">Users</string>
    <string name="user">User</string>
    <string name="options">Options</string>
    <string name="cart_items">Cart Items</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apply">Apply</string>
    <string name="select_city">Select City</string>
    <string name="from">From</string>
    <string name="min_price">Min Price</string>
    <string name="to">To</string>
    <string name="max_price">Max Price</string>
    <string name="promotional_balance">Promotional Balance</string>
    <string name="balance">Balance</string>
    <string name="update">Update</string>
    <string name="notification">Notification</string>
    <string name="product_manager">Product Manager</string>
    <string name="sorted_by">Sorted By</string>
    <string name="confirmed">Confirmed</string>
    <string name="delivered">Delivered</string>
    <string name="arriving">Arriving</string>
    <string name="binding">Binding</string>
    <string name="rejected">Rejected</string>
    <string name="select_day">Select Day</string>
    <string name="delete">Delete</string>
    <string name="ad_manager">Ad Manager</string>
    <string name="title">Title</string>
    <string name="target">Target</string>


</resources>