<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_outlined_home_24"
        android:title="@string/home"/>
    <item
        android:id="@+id/orders"
        android:enabled="true"
        android:icon="@drawable/ic_orders"
        android:title="@string/orders" />
    <item
        android:id="@+id/account"
        android:enabled="true"
        android:icon="@drawable/ic_outlined_person_24"
        android:title="@string/account"/>
    <item
        android:id="@+id/statistics"
        android:enabled="true"
        android:icon="@drawable/ic_statistics"
        android:title="@string/statistics"/>
    <item
        android:id="@+id/users"
        android:enabled="true"
        android:icon="@drawable/ic_users"
        android:title="@string/users"/>
</menu>