<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_favorites"
        android:icon="@drawable/ic_favorite_outlined_24"
        android:title="@string/favorites"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_cart"
        android:icon="@drawable/ic_outlined_shopping_cart_24"
        android:title="@string/cart"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_options"
        android:icon="@drawable/ic_settings"
        android:title="@string/options"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_filter"
        android:icon="@drawable/ic_filter_alt_24"
        android:title="@string/filter"
        app:showAsAction="ifRoom" />

</menu>