<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailOutlinedTextField"
            app:boxStrokeColor="@color/blue_accent_300">

            <AutoCompleteTextView
                android:id="@+id/selectCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dropDownHeight="240dp"
                android:inputType="none"
                android:labelFor="@id/textInputLayout"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.legacy.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:weightSum="6">


            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/from"/>


            <EditText
                android:id="@+id/min_Price"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:background="@drawable/bg_field"
                android:layout_height="40dp"
                android:inputType="number"
                android:textAlignment="center"
                android:hint="@string/min_price"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/to"/>


            <EditText
                android:id="@+id/max_Price"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:background="@drawable/bg_field"
                android:layout_height="40dp"
                android:inputType="number"
                android:textAlignment="center"
                android:hint="@string/max_price"/>


        </LinearLayout>

    </LinearLayout>
</layout>