<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="price"
            type="Integer" />

        <variable
            name="balance"
            type="Integer" />

        <variable
            name="homeViewModel"
            type="com.shoppingapp.info.screens.home.HomeViewModel" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/wallet_height"
        android:padding="4dp"
        android:layout_margin="4dp"
        android:background="@drawable/bg_wallet">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_baseline_shopping_cart_24"
            app:tint="@color/white" />


        <LinearLayout
            android:id="@+id/price_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="end"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/price"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="25sp"
                setPrice="@{homeViewModel.totalItemsPrice}"
                tools:text="25 LYD"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/my_balance"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/white"
                setPrice="@{homeViewModel.balance}"
                android:textSize="25sp"
                tools:text="25 LYD"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/btn_AddBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/add_balance"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_add_24"
                android:layout_gravity="center"
                app:tint="@color/white" />

        </LinearLayout>




    </FrameLayout>


</layout>