<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/product_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="false"
        android:focusable="true"
        app:cardElevation="0dp"
        app:strokeColor="#CCCCCC"
        app:strokeWidth="1dp">

        <include
            android:id="@+id/loader_layout"
            layout="@layout/circular_loader_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/product_image_view"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/round_outline_rect"
                android:contentDescription="@string/image_item"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/cart_product_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:lines="2"
                android:textAppearance="@style/TextAppearance.MyTheme.Body1"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/cart_product_like_btn"
                app:layout_constraintStart_toEndOf="@+id/product_image_view"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="some title may be two lines" />

            <ImageButton
                android:id="@+id/cart_product_like_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/round_button"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/like_button"
                android:scaleType="center"
                app:layout_constraintBottom_toBottomOf="@+id/cart_product_title"
                app:layout_constraintEnd_toStartOf="@+id/cart_product_delete_btn"
                app:layout_constraintTop_toTopOf="@+id/cart_product_title"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/heart_icon_drawable" />

            <ImageButton
                android:id="@+id/cart_product_delete_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/round_button"
                android:contentDescription="@string/remove_product_button"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="@+id/cart_product_like_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cart_product_like_btn"
                app:srcCompat="@drawable/ic_delete_24"
                app:tint="@color/gray" />

            <TextView
                android:id="@+id/cart_product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:textAppearance="@style/TextAppearance.MyTheme.Body1"
                android:textColor="@color/blue_accent_300"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/product_image_view"
                app:layout_constraintTop_toBottomOf="@+id/cart_product_title"
                app:layout_constraintVertical_bias="1.0"
                tools:text="$1234.56" />

            <LinearLayout
                android:id="@+id/cart_product_quantity_buttons_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/layout_background_rounded_corners"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@id/cart_product_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@id/cart_product_price"
                app:layout_constraintTop_toTopOf="@+id/cart_product_price"
                app:layout_constraintVertical_bias="1.0">

                <ImageButton
                    android:id="@+id/btn_cart_product_minus"
                    android:layout_width="36dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:contentDescription="@string/decrease_button"
                    app:srcCompat="@drawable/ic_remove_24" />

                <TextView
                    android:id="@+id/cart_product_quantity"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/blue_shadow_color"
                    android:gravity="center_horizontal|center_vertical"
                    android:textAppearance="@style/TextAppearance.MyTheme.Body1"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:text="123" />

                <ImageButton
                    android:id="@+id/btn_cart_product_plus"
                    android:layout_width="36dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:contentDescription="@string/increase_button"
                    app:srcCompat="@drawable/ic_add_24" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>